# practice4

./: CMakeLists.txt
BookStorage/: CMakeLists.txt
BookStorage/Factory/: AbstractBookStorageFactory.h  BookStorageGeneral.h  EBookStorageFactory.h  PaperBookStorageFactory.h
BookStorage/Files/: EBook.txt  PaperBook.txt
BookStorage/Interface/: IFileOperational.h  List.cpp
BookStorage/Logic/: BookStorage.cpp  BookStorage.h  EBookStorage.cpp  EBookStorage.h  FileReader.cpp  FileReader.h  Library.cpp  Library.h  PaperBookStorage.cpp  PaperBookStorage.h
adminMenu/: AdminMenu.cpp  AdminMenu.h  CMakeLists.txt  main.cpp
userMenu/: CMakeLists.txt  UserMenu.cpp  UserMenu.h  main.cpp
